tests/parsing/smtlib/v2.7/errors/092_get-info_unclosed_1.smt2
(set-logic ALL)
(get-info :foo _)
